@@ -14,7 +14,7 @@ mathsincludedir = $(pkgincludedir)/maths
 
 noinst_LTLIBRARIES = libmaths.la
 
-libmaths_la_SOURCES = approx.cpp matrixops.cpp nprimes.cpp nray.cpp numbertheory.cpp seedprimes.cpp
+libmaths_la_SOURCES = approx.cpp matrixops.cpp nfastray.cpp nprimes.cpp nray.cpp numbertheory.cpp seedprimes.cpp
 
-mathsinclude_HEADERS = approx.h matrixops.h nfastvector.h nmatrix.h nmatrixint.h nprimes.h nray.h numbertheory.h nvector.h nvectordense.h nvectormatrix.h nvectorunit.h
+mathsinclude_HEADERS = approx.h matrixops.h nfastray.h nfastvector.h nmatrix.h nmatrixint.h nprimes.h nray.h numbertheory.h nvector.h nvectordense.h nvectormatrix.h nvectorunit.h
 
